--- a/Client/package.json
+++ b/Client/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
